--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table>
     <tr>
         <th>
-            <img src="https://github.com/digvijaysinghh/WebDev_angelayu/blob/main/MIne_circle_.png" width="250px" alt="Digvijay Singh">
+            <img src="MIne_circle_.png" width="250px" alt="Digvijay Singh">
         <td>
             <div>
                 <center>
@@ -20,7 +20,7 @@
                 </center>
             </div><br><br>
             <div>
-               <center> <a href="https://github.com/digvijaysinghh/WebDev_angelayu/blob/main/contact.html"><Strong>Contact Me!</Strong></a></center>
+               <center> <a href="contact.html"><Strong>Contact Me!</Strong></a></center>
             </div>
         </td>
     </tr>
