--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>
         <strong>Work Experience</strong>
     </h3>
-    <table cellspacing="10">
+    <table cellspacing="15">
         <tr>
             <th>Duration</th>
             <th>Title</th>
@@ -39,7 +39,7 @@
                 Dec 2021-Present
             </td>
             <td>
-                QA Software Testers
+                QA Software Tester
             </td>
         </tr>
     </table>
@@ -50,9 +50,9 @@
     <table cellspacing="10">
         <tr>
             <th>Duration</th>
-            <th>Subject</th>
+            <th>Standard</th>
             <th>Marks</th>
-            <th>Institute Name</th>
+            <th>Institute Name & Website</th>
         </tr>
         <tr>
             <td>
@@ -65,7 +65,7 @@
                 82%
             </td>
             <td>
-                Shiv Vani Model Sr. Sec. School
+                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank">Go to site👉</a>
             </td>
         </tr>
         <tr>
@@ -79,7 +79,7 @@
                 75%
             </td>
             <td>
-                Shiv Vani Model Sr. Sec. School
+                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank">Go to site👉</a>
             </td>
         </tr>
         <tr>
@@ -88,7 +88,8 @@
             </td>
             <td>BCA</td>
             <td><em>To be updated</em></td>
-            <td>GL Bajaj Institute of Management</td>
+            <td>GL Bajaj Institute of Management<a href="https://www.glbim.org" target="_blank">Go to site👉</a>
+            </td>
         </tr>
     </table>
     <hr size="2" noshade>
