--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <th>Duration</th>
             <th>Standard</th>
             <th>Marks</th>
-            <th>Institute Name & Website</th>
+            <th>Institution Name & Website</th>
         </tr>
         <tr>
             <td>
@@ -65,7 +65,7 @@
                 82%
             </td>
             <td>
-                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank">Go to site👉</a>
+                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank"><em>Go to site👉</em></a>
             </td>
         </tr>
         <tr>
@@ -79,7 +79,7 @@
                 75%
             </td>
             <td>
-                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank">Go to site👉</a>
+                Shiv Vani Model Sr. Sec. School <a href="http://www.shivvani.in" taget="_blank"><em>Go to site👉</em></a>
             </td>
         </tr>
         <tr>
@@ -88,7 +88,7 @@
             </td>
             <td>BCA</td>
             <td><em>To be updated</em></td>
-            <td>GL Bajaj Institute of Management<a href="https://www.glbim.org" target="_blank">Go to site👉</a>
+            <td>GL Bajaj Institute of Management<a href="https://www.glbim.org" target="_blank"><em>Go to site👉</em></a>
             </td>
         </tr>
     </table>
