--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digvijay's Personal Site</title>
+    <style>
+        body {
+            background-color: #EAF6F6;
+        }
+        hr {
+            background-color:lightcoral;
+            border-style: none;
+            height: 2px;
+            width: 40%;
+        }
+    </style>
 </head>
 <body>
   <table>
