--- a/index.html
+++ b/index.html
@@ -155,5 +155,15 @@
     </table>
     <hr size="2" noshade>
     </div>
+    <iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCfDQfo0HhoJZ76Z7wGfirCxvCzdhLbyjk
+    &q=Space+Needle,Seattle+WA">
+</iframe>
 </body>
 </html>
